Master Fase 4 concluida frontend concluido com testes e melhorias
